#125-Implement-the-connection-with-the-terminology-servers
Correct the functions search in FHIR TX and snomed CT